testsuite/tests/properties/invalid_dflt_arg_override/extra_default/test.lkt
import common

class FooNode implements Node[FooNode] {
    @exported @abstract fun prop(a: Bool): Bool
}

class Example: FooNode {
    fun prop(a: Bool=true): Bool = a
}
